2001-11-14  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSet.cc, FileSet.h: add rank member; sorting by it;
	  SortByPatternList new method of FileSet; get rid of DATE_UNPREC;
	  add date_prec member.
	* FileSetOutput.cc, FtpListInfo.cc, Fish.cc: no more DATE_UNPREC.
	* LocalAccess.cc: fix uploading of empty files to file:.
	* MirrorJob.cc, MirrorJob.h: no DATE_UNPREC, no explicit date precision;
	  sort to_transfer set by mirror:order-upload/order-download.
	* commands.cc: change mirror help.
	* resource.cc: define new mirror settings, remove precision ones.

2001-11-13  Alexander V. Lukyanov <lav@yars.free.net>

	* StringPool.cc, StringPool.h: new files. String cache implemented.
	* FileSet.cc, FileSet.h: use them.
	* ColumnOutput.cc, DirColors.cc, DirColors.h, FileSetOutput.cc,
	  FileSetOutput.h, Makefile.am, lftp.cc, resource.cc: move LS_COLORS
	  parsing and storing into separate class DirColors; use it.
	* FtpListInfo.cc: support large file sizes.
	* HttpDir.cc: use some additional information from listing (size, perms,
	  user, group, nlink).

2001-11-13  Glenn Maynard <g_ld@zewt.org>

	* FileSet.cc, FileSet.h, FileSetOutput.cc, FileSetOutput.h,
	FtpListInfo.cc, commands.cc:

	*user and *group field to FileInfo, parser support in ParseFtpLongList_UNIX
	and LocalFile.

	Added link count; cls -l output now has all expected fields (except for
	the ACL indicator.)

	All cls -l fields can now be enabled individually, to let people disable
	them selectively.

	Cleaned cls "tips" a little (not enough); added a forgotton \n.

	cls will now remove entire fields if no files have it, instead of
	padding every file.  (ColumnOutput only does this for the left side of
	an entire entry.)

2001-11-13  Glenn Maynard <g_ld@zewt.org>

	* FileSet.cc, FileSet.h: (PrependPath) new FileSet method.

	* FileSetOutput.cc, FileSetOutput.h, FindJobDu.cc, GetFileInfo.cc,
	GetFileInfo.h, Makefile.am, commands.cc, ftpclass.cc:
