@@ -164,6 +164,7 @@ public:
    void	 LocalRemove(const char *dir);
    void	 LocalUtime(const char *dir,bool only_dirs=false);
    void	 LocalChmod(const char *dir,mode_t mask=0);
+   void	 LocalChown(const char *dir);
 
    void Count(int *d,int *f,int *s,int *o);
 
